<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_retrieve_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login2"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/ly_retrieve_bar"
        layout="@layout/activity_main_login_navigation_bar" />

    <LinearLayout
        android:id="@+id/ll_retrieve_tel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_retrieve_tel_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_singup_mobile"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/et_retrieve_tel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_input_username_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_line_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <ImageView
            android:id="@+id/iv_retrieve_tel_del"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_clear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_retrieve_code"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_retrieve_code_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_signup_sms" />

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/et_retrieve_code_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_sms_auth_code"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_line_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <TextView
            android:id="@+id/retrieve_sms_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:alpha="0.4"
            android:background="@drawable/bg_register_call_sms"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="4dp"
            android:paddingBottom="2dp"
            android:text="@string/register_sms_hint"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_retrieve_submit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_submit_lock"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/retrieve_pwd_step_hint"
        android:textColor="@color/account_lock_font_color"
        android:textSize="@dimen/font_18"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/retrieve_pwd_email_label_one"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="0dp"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/tv_retrieve_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:text="@string/retrieve_pwd_email_label"
            android:textColor="@color/login_input_active"
            android:textSize="16sp"
            android:translationZ="0dp"
            tools:ignore="RtlSymmetry"
            tools:targetApi="lollipop" />


    </LinearLayout>


</LinearLayout>