<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_register_two_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/logo1" />
    <LinearLayout
        android:id="@+id/ll_register_two_username"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_register_username_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_login_username"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/etxt_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_username_hint"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/dark"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <ImageView
            android:id="@+id/iv_register_username_del"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_clear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_register_two_pwd"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_register_pwd_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_login_password" />

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/etxt_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_pwd_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/dark"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <ImageView
            android:id="@+id/iv_register_pwd_del"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_clear" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_sex"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sex_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/sex_foreground" />

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/etxt_age"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="年龄"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/dark"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16"
            />

        <ImageView
            android:id="@+id/iv_register_age"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_clear" />
    </LinearLayout>

    <RadioGroup
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >

        <RadioButton
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:id="@+id/sex1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="男"
            android:textColor="#FFF"
            android:buttonTint="#FFF"/>

        <RadioButton
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:id="@+id/sex2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="女"
            android:textColor="#FFF"
            android:buttonTint="#FFF"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_submit"
        android:elevation="0dp"
        android:onClick="register"
        android:outlineProvider="none"
        android:text="@string/login_register_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        tools:targetApi="lollipop" />

</LinearLayout>